# stm32_template

./: CMakeLists.txt  CMakePresets.json  README.md  create_project.py  flash.sh
app/: main.c  stm32f10x_it.c  stm32f10x_it.h
cmake/: arm-none-eabi.cmake  stm32f10x_flash.ld.in
driver/: oled.c  oled.h  oled_data.c  usart1_dma.c  usart1_dma.h
startup/: startup_stm32f10x_md.s
